adding authorization code grant type

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.jpa.generate-ddl=true
 
 security.oauth2.client.client-id=webapp
 security.oauth2.client.client-secret=secret
-security.oauth2.client.authorized-grant-types=client_credentials,refresh_token
+security.oauth2.client.authorized-grant-types=authorization_code,client_credentials,refresh_token
 security.oauth2.client.resource-ids=restapi
+security.oauth2.client.auto-approve-scopes=.*
 security.oauth2.client.scope=read,write
 security.oauth2.resource.id=restapi
