--- a/web-app/src/main/resources/application.properties
+++ b/web-app/src/main/resources/application.properties
@@ -1,15 +1,21 @@
-server.port=9080
+server.port=9084
 
-security.basic.enabled=true
+app.auth-server.host=http://localhost:9085/uaa
+app.rest-api.host=http://localhost:8236/api
+
+security.basic.enabled=false
 security.user.name=user
 security.user.password=password
 
-#security.oauth2.client.client-id=webapp
+security.oauth2.client.client-id=webapp
 security.oauth2.client.client-secret=secret
-security.oauth2.client.grant-type=client_credentials
-security.oauth2.client.scope=read,write
-security.oauth2.client.access-token-uri=http://localhost:9081/oauth/token
-security.oauth2.client.user-authorization-uri=http://localhost:9081/oauth/authorize
+security.oauth2.client.access-token-uri=${app.auth-server.host}/oauth/token
+security.oauth2.client.user-authorization-uri=${app.auth-server.host}/oauth/authorize
+security.oauth2.resource.jwt.key-uri=${app.auth-server.host}/oauth/token_key
 
-zuul.routes.users.path=/user/**
-zuul.routes.users.url=http://localhost:9081/users
+zuul.routes.user.path=/user/**
+zuul.routes.user.url=${app.auth-server.host}/user
+zuul.routes.users.path=/users/**
+zuul.routes.users.url=${app.rest-api.host}/users
+
+logging.level.org.springframework.security=DEBUG
