--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-server.port=9081
+server.port=9085
+server.context-path=/uaa
 
-security.user.name=user
-security.user.password=password
+security.user.name=admin
+security.user.password=pass
 
 spring.datasource.initialize=true
 spring.jpa.generate-ddl=true
@@ -13,3 +14,5 @@ security.oauth2.client.resource-ids=restapi
 security.oauth2.client.auto-approve-scopes=.*
 security.oauth2.client.scope=read,write
 security.oauth2.resource.id=restapi
+
+logging.level.org.springframework.security=DEBUG
