separating out auth-server from rest-api

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -1,18 +1,20 @@
-server.port=9085
-server.context-path=/uaa
+info.build.artifact=@project.artifactId@
+info.build.name=@project.name@
+info.build.description=@project.description@
+info.build.version=@project.version@
 
-security.user.name=admin
-security.user.password=pass
+server.port=8236
+
+management.security.role=ADMIN
+management.context-path=/manage
+
+app.auth-server.host=http://localhost:8235/uaa
 
 spring.datasource.initialize=true
 spring.jpa.generate-ddl=true
 
-security.oauth2.client.client-id=webapp
-security.oauth2.client.client-secret=secret
-security.oauth2.client.authorized-grant-types=authorization_code,client_credentials,refresh_token
-security.oauth2.client.resource-ids=restapi
-security.oauth2.client.auto-approve-scopes=.*
-security.oauth2.client.scope=read,write
+security.sessions=stateless
 security.oauth2.resource.id=restapi
+security.oauth2.resource.jwt.key-uri=${app.auth-server.host}/oauth/token_key
 
 logging.level.org.springframework.security=DEBUG
