--- a/web-app/src/main/resources/application.properties
+++ b/web-app/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-server.port=9084
+info.build.artifact=@project.artifactId@
+info.build.name=@project.name@
+info.build.description=@project.description@
+info.build.version=@project.version@
 
-app.auth-server.host=http://localhost:9085/uaa
-app.rest-api.host=http://localhost:8236/api
+server.port=8234
+
+management.security.role=ADMIN
+management.context-path=/manage
+
+app.auth-server.host=http://localhost:8235/uaa
+app.rest-api.host=http://localhost:8236
 
 security.basic.enabled=false
 security.user.name=user
@@ -15,7 +23,7 @@ security.oauth2.resource.jwt.key-uri=${app.auth-server.host}/oauth/token_key
 
 zuul.routes.user.path=/user/**
 zuul.routes.user.url=${app.auth-server.host}/user
-zuul.routes.users.path=/users/**
-zuul.routes.users.url=${app.rest-api.host}/users
+zuul.routes.api.path=/api/**
+zuul.routes.api.url=${app.rest-api.host}
 
 logging.level.org.springframework.security=DEBUG
