--- a/web-app/src/main/resources/application.properties
+++ b/web-app/src/main/resources/application.properties
@@ -3,11 +3,13 @@ info.build.name=@project.name@
 info.build.description=@project.description@
 info.build.version=@project.version@
 
+server.address=localhost
 server.port=8234
 
 management.security.role=ADMIN
 management.context-path=/manage
 
+app.host=http://${server.address}:${server.port}
 app.auth-server.host=http://localhost:8235/uaa
 app.rest-api.host=http://localhost:8236
 
