--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -71,6 +71,11 @@
       <artifactId>spring-security-jwt</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.mitre.dsmiley.httpproxy</groupId>
+      <artifactId>smiley-http-proxy-servlet</artifactId>
+      <version>1.7</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
